[package]
name = "dmntk-test-runner"
version = "0.3.6"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "DMNTK | Test runner"
documentation = "https://docs.rs/dmntk-test-runner"
repository = "https://github.com/dmntk/dmntk.test.runner.git"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
http = "1.1.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20.0"
serde = { version = "1.0.209", features=["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.33"
url = "2.5.2"
